--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "mocha **/*.test.js",
     "test-watch": "nodemon --exec \"npm test\""
   },
-  "emgines" : {
+  "emgines": {
     "node": "8.4.0"
   },
   "author": "Scott Smith",
@@ -16,6 +16,7 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
+    "lodash": "^4.17.4",
     "mongodb": "^2.2.5",
     "mongoose": "^4.11.9"
   },
